--- a/pipeline Gioblastoma (GSE214966).ipynb
+++ b/pipeline Gioblastoma (GSE214966).ipynb
@@ -20,7 +20,7 @@
     "\n",
     "For this analysis, we decided to study a dataset of Gioblastoma (Brain cancer) extracted from Lee et al, 2024. In this study and due to the difficulty to treat this type of cancerd because of the Blood-Brain Barrier, they analise different patients and how different neuroactive drugs (antidepresants mostly) affect the treatment and survavility to the disease. The porpuse of our analysis is not to reproduce the analysis performed in the original paper but to play with the data and find things that may be interesting and try to understand hoy this type of data can be managed. To do that, we will not base our pipeline and methods on the paper itself but in our own interpretation of the data. \n",
     "\n",
-    "This set of data is composed of 4 samples extracted from 4 different patients, refered in the original paper as \"Lee et al samples\". Samples were dissasociated with standard procedures and stored frozen before sequenced using 10xGenomics, NovaSeq6000 (Illumina) and CellRanger to produce the data that we used. "
+    "This set of data is composed of 4 samples extracted from 4 different patients, refered in the original paper as \"Lee et al samples\". Samples were dissasociated with standard procedures and stored frozen before sequenced using 10xGenomics, NovaSeq6000 (Illumina) and CellRanger to produce the data that we used. ñslkjdfg"
    ]
   },
   {
